# sidequest_hardcoders

./: .gitignore  CMakeLists.txt  README.md  create_database.sql
.cmake/api/v1/reply/: cache-v2-1be35fdfb3a97b95864e.json  cmakeFiles-v1-06d727b14b0d2c2b3ff1.json  codemodel-v2-86a552dccb73f8f97f3d.json  directory-_deps.googletest-build.googlemock-7ee6905b154717b62c44.json  directory-_deps.googletest-build.googletest-da853b10538b3bb5b815.json  index-2025-05-14T20-36-45-0805.json  target-gmock-0e0484328c1ad197f0dc.json  target-gmock_main-e91b236cec058898e1a8.json  target-gtest-407e475f100664b84c53.json  target-gtest_main-d447f397fc88da23492e.json  target-server-7588cb90fdbd0c312c68.json  target-server_lib-ba31dcb6945639dc2afc.json  target-sidequest_lib-e0084ddab8ebce16f916.json  target-unit_tests-90b186ecaf0f54f3fe57.json
application_root/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  create_database.sql  unit_tests[1]_include.cmake
application_root/.cmake/api/v1/reply/: cache-v2-8378c021c39961c76888.json  cmakeFiles-v1-9fef690d611c93c074ff.json  codemodel-v2-37661fb3deb1926ae0f9.json  directory-_deps.googletest-build-Debug-2ec94e27c9da22491447.json  directory-_deps.googletest-build.googlemock-Debug-d24d52001476197fb8ae.json  directory-_deps.googletest-build.googletest-Debug-fb5a9719d6e58123244a.json  index-2025-05-14T21-21-01-0423.json  target-gmock-Debug-2c51c3764f04d0736297.json  target-gmock_main-Debug-3aaea723b1e6f0b4be26.json  target-gtest-Debug-479adee5882bb8e8bcba.json  target-gtest_main-Debug-7707185e8f8d7ca4b93b.json  target-server-Debug-6afd7a221fbcf6918ac9.json  target-server_lib-Debug-7f687025cbe8fa950a46.json  target-sidequest_lib-Debug-f4dcc5dd461c1fe39717.json  target-unit_tests-Debug-46ea7a147cec914a8cfe.json
cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests[1]_include.cmake
src/server/: main.cpp
src/server/controller/quest/: quest_by_owner.cpp  quest_by_owner.h  quest_by_parent.cpp  quest_by_parent.h  quest_create_command.cpp  quest_create_command.h  quest_delete_command.cpp  quest_delete_command.h  quest_read_command.cpp  quest_read_command.h  quest_update_command.cpp  quest_update_command.h
src/server/controller/user/: user_create_command.cpp  user_create_command.h  user_delete_command.cpp  user_delete_command.h  user_read_command.cpp  user_read_command.h  user_update_command.cpp  user_update_command.h
src/server/model/: server_quest.cpp  server_quest.h  server_user.cpp  server_user.h
src/server/network/: command_handler.c  command_handler.cpp  command_handler.h  network_handler.c  network_handler.cpp  network_handler.h
src/server/storage/: Query.cpp  Query.h  column_cache.cpp  column_cache.h  database.cpp  database.h  database_exceptions.cpp  database_exceptions.h  persistable.cpp  persistable.h  prepared_statement.h  statement_cache.cpp  statement_cache.h
src/sidequest/model/: id.h  quest.cpp  quest.h  user.cpp  user.h
src/sidequest/network/: json_serializable.cpp  json_serializable.h  serializable_quest.cpp  serializable_quest.h  serializable_user.cpp  serializable_user.h
src/unit_tests/: crud_test.cpp  quest_threadding_test.cpp  serialise_test_quest.cpp  serialise_test_user.cpp  server_loading_test.cpp  server_user_test.cpp
